# agate

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  cdk.json  package-lock.json  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
agate/: __init__.py  a2a.py  a2ui.py  admin.py  agent_dispatch.py  agent_record.py  agentcompile.py  agentspec.py  agui.py  artifact.py  authoring.py  boundary.py  budget.py  connectors.py  corpus.py  delegate.py  drafting.py  entitlements.py  graph.py  identity.py  jwt_verify.py  lti.py  memory.py  names.py  patterns.py  payments.py  rag.py  room_record.py  rooms.py  router.py  session_record.py  skills.py  slurm.py  tags.py  triggers.py  webfetch.py
agate/analyze/: __init__.py  orchestrator.py  schema.py
agate/panel/: __init__.py  orchestrator.py
agent/: Dockerfile  README.md  backends.py  memory_client.py  server.py
agg/: __init__.py  agent_dispatch.py  artifact.py  contracts.py  entitlements.py  jwt_verify.py  lti.py  multimodal.py  names.py  rag.py  router.py  tags.py
agg/analyze/: __init__.py  orchestrator.py  prompts.py
agg/panel/: __init__.py  orchestrator.py  prompts.py  schema.py
chokepoint/: handler.py
cli/: go.mod
cost/: README.md  __init__.py  meter.py  precall.py  pricelist.py  pricing.py  softcap.py
docs/: academic-interaction-model.md  agate-agents-vision.md  agate-design.md  agate-security-ciso.md  aws-genai-gateway-design.md  aws-genai-gateway-security-ciso.md  index.md
docs/architecture/: request-paths.md
docs/images/: README.md
docs/product/: maturity-matrix.md
docs/reference/: regions-and-service-support.md
docs/security/: threat-model.md
infra/: app.py  assets.py
infra/stacks/: admin.py  agent.py  audit.py  authoring.py  chokepoint.py  corpus.py  data.py  demo_idp.py  deploy.py  drafting.py  governance.py  identity.py  lti.py  memory.py  rooms.py  web.py
ingest/: README.md  handler.py
lti/: README.md  handler.py  requirements.txt
meter/: README.md  __init__.py  handler.py  parse.py
policy/: __init__.py  cedar.py  generate.py
scripts/: deploy-demo.sh
tests/: conftest.py  test_a2a.py  test_a2ui.py  test_admin.py  test_agent_dispatch.py  test_agent_record.py  test_agent_server.py  test_agent_stack_synth.py  test_agentcompile.py  test_agentspec.py  test_agui.py  test_analyze_orchestrator.py  test_analyze_schema.py  test_artifact.py  test_authoring.py  test_authoring_handler.py  test_authoring_stack_synth.py  test_backends.py  test_boundary.py  test_broker.py  test_budget.py  test_cascade.py  test_cedar.py  test_chokepoint.py  test_chokepoint_stack_synth.py  test_connectors.py  test_corpus.py  test_corpus_handler.py  test_corpus_stack_synth.py  test_cost.py  test_delegate.py  test_demo_idp_pretoken.py  test_deploy_handler.py  test_deploy_stack_synth.py  test_drafting.py  test_drafting_handler.py  test_drafting_stack_synth.py  test_entitlements.py  test_governance_synth.py  test_graph.py  (+47 more)
tests/fixtures/: pricelist_bedrock_us_east_1.json
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/scripts/: copy-pyodide.mjs
web/src/: config.ts  cost.test.ts  cost.ts  main.ts  router.ts  (+2 more)
(+95 files in other folders)
